[project]
name = "freethreading-asyncio"
version = "0.1.0"
description = "Benchmarks for Python 3.14 free-threading with asyncio"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "granian>=2.6.0",
    "httpx>=0.28.1",
]

[project.scripts]
benchmark = "benchmark:main"
